Fix: removed white bar at top on mobile

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -33,6 +33,10 @@ a {
   .innerApp {
     padding: 0 2.5% 0 2.5%;
   }
+  h1 {
+    margin-top: 0;
+    padding-top: 1rem;
+  }
 }
 
 .App-logo {
